--- a/app/views/mobile app stock requisition/home.html
+++ b/app/views/mobile app stock requisition/home.html
@@ -1,159 +1,224 @@
 <!DOCTYPE html>
-<html ng-app="main">
+<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOVE app</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:300,400,400i,500,700">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/move.css">
     <link rel="stylesheet" href="assets/css/tables.css">
 </head>
 
-<body>
-  <div class="container header">
-    <div class="row">
-      <div class="col-xs-6">
-        <img src = "assets/img/logo-Stock-1.jpg" width = "100%">
+<body class="">
+  <div class="">
+    <!--Header-->
+      <div class="container header">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-6">
+              <!-- <h3><img src="assets/img/logo-trim.png" width="60%"></img></h3> -->
+              <a href="index.html" class="colorless"><h4>MOVE</h4></a>
+            </div>
+
+            <div class="col-xs-6 text-right">
+              <h5>
+                <i class="fa fa-bell icon"></i>
+                <i class="fa fa-question-circle icon"></i><strong> HELP </strong></h5>
+              </h5>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-xs-6">
-        <h6 class="text-uppercase green text-right">
-          <i class="fa fa-check icon"></i>
-          <strong>online </strong>
-        </h6>
+
+      <div class="container subheader">
+        <div class="row">
+          <div class="col-xs-7">
+            <h5>Select a component...</h5>
+          </div>
+          <div class="col-xs-5 green text-right">
+            <h5><i class="fa fa-check"></i><strong> ONLINE </strong></h5>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-8">
-        <h5 class="">Stock Requisition</h5>
+      <div class="">
+        <div class="list">
+          <a href="select-program.html" class="colorless">
+            <div class="row">
+              <div class="col-xs-2 orange-column text-center">
+                <!-- <img src="assets/img/stock.png"> -->
+                <i class="fa fa-list"></i>
+              </div>
+              <div class="col-xs-8 white-column">
+                <h5>Stock Count</h5>
+              </div>
+              <div class="col-xs-2 white-column">
+                <h5><i class="fa fa-chevron-right"></i><h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="list">
+          <a href="#" class="colorless">
+            <div class="row">
+              <div class="col-xs-2 orange-column text-center">
+                <!-- <img src="assets/img/bell.png"> -->
+                <i class="fa fa-bell"></i>
+              </div>
+              <div class="col-xs-8 white-column">
+                <h5>Stock Out Alert</h5>
+              </div>
+              <div class="col-xs-2 white-column">
+                <h5><i class="fa fa-chevron-right"></i></h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="list">
+          <a href="requisition.html" class="colorless">
+            <div class="row">
+              <div class="col-xs-2 text-center orange-column">
+                <!-- <img src="assets/img/business.png"> -->
+                <i class="fa fa-shopping-cart"></i>
+              </div>
+              <div class="col-xs-8 white-column">
+                <h5>Stock Requisition</h5>
+              </div>
+              <div class="col-xs-2 white-column">
+                <h5><i class="fa fa-chevron-right"></i></h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="list">
+          <a href="#" class="colorless">
+            <div class="row">
+              <div class="col-xs-2 orange-column text-center">
+                <!-- <img src="assets/img/trash-1.png"> -->
+                <i class="fa fa-trash"></i>
+              </div>
+              <div class="col-xs-8 white-column">
+                <h5>Waste Count</h5>
+              </div>
+              <div class="col-xs-2 white-column">
+                <h5><i class="fa fa-chevron-right"></i></h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="list">
+          <a href="#" class="colorless">
+            <div class="row">
+              <div class="col-xs-2 orange-column text-center">
+                <!-- <img src="assets/img/business-1.png"> -->
+                <i class="fa fa-arrow-down"></i>
+              </div>
+              <div class="col-xs-8 white-column">
+                <h5>Incoming Delivery</h5>
+              </div>
+              <div class="col-xs-2 white-column">
+                <h5><i class="fa fa-chevron-right"></i></h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="list">
+          <a href="#" class="colorless">
+            <div class="row">
+              <div class="col-xs-2 orange-column text-center">
+                <!-- <img src="assets/img/business-2.png"> -->
+                <i class="fa fa-arrow-up"></i>
+              </div>
+              <div class="col-xs-8 white-column">
+                <h5>Outgoing Delivery</h5>
+              </div>
+              <div class="col-xs-2 white-column">
+                <h5><i class="fa fa-chevron-right"></i></h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="list">
+          <a href="settings.html" class="colorless">
+            <div class="row">
+              <div class="col-xs-2 orange-column text-center">
+                <!-- <img src="assets/img/business-2.png"> -->
+                <i class="fa fa-gear"></i>
+              </div>
+              <div class="col-xs-8 white-column">
+                <h5>Settings</h5>
+              </div>
+              <div class="col-xs-2 white-column">
+                <h5><i class="fa fa-chevron-right"></i></h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="list">
+          <a class="colorless" role="button" data-toggle="modal" data-target="#myModal">
+            <div class="row">
+              <div class="col-xs-2 orange-column text-center">
+                <!-- <img src="assets/img/business-2.png"> -->
+                <i class="fa fa-info-circle"></i>
+              </div>
+              <div class="col-xs-8 white-column">
+                <h5>Help</h5>
+              </div>
+              <div class="col-xs-2 white-column">
+                <h5><i class="fa fa-chevron-right"></i></h5>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content modal-intro">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">First time here?</h4>
+              </div>
+              <div class="modal-body">
+                <p>Welcome! Here's a brief overview of what you need to do:</p>
+                <p><ul class="fa-ul">
+                  <li class="spacer"> <i class="fa-li fa fa-info-circle"></i> Fill in contact information for this facility</li>
+                  <li class="spacer"> <i class="fa-li fa fa-briefcase"></i> Select and configure the programs this facility is currently participating in</li>
+                  <li class="spacer"> <i class="fa-li fa fa-asterisk"></i> Fill in Cold Chain equipment information</li>
+                  <li class="spacer"> <i class="fa-li fa fa-map-marker"></i> Configure locations this facility delivers or receives stock from</li>
+                </ul></p>
+              </div>
+              <div class="modal-footer">
+                <div class="row">
+                  <!-- <div class="col-xs-6">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div> -->
+                  <div class="col-xs-12">
+                    <button type="button" class="btn btn-primary">Take me to Step 1</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-xs-4">
-        <h6 class="text-uppercase dark-grey text-right">
-          <i class="fa fa-question-circle icon"></i>
-          <strong>help </strong>
-        </h6>
-      </div>
-    </div>
+
   </div>
 
-  <div class="container">
-    <a role="button" href="new stock request II.html" class="btn request-new">
-      <i class="fa fa-plus icon"></i>Request New Stock
-    </a>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 text-center">
-        <h5>Previous Stock Requisitions</h5>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="table-responsive">
-      <table class="table">
-        <!-- <thead>
-        <tr>
-          <th class="dark-grey">DATE</th>
-          <th class="dark-grey text-center">DELIVERED? </th>
-          <th> </th>
-        </tr>
-        </thead> -->
-        <tbody>
-          <tr>
-            <td><p><strong>28 May 2016</strong></p></td>
-            <td class="text-center">
-              <i class="fa fa-close red"></i>
-              <!-- <p class="text-uppercase red">not delivered</p> -->
-            </td>
-            <td class="blue text-right"><p><strong>VIEW </strong><i class="fa fa-chevron-right icon"></i></p></td>
-          </tr>
-
-          <tr>
-            <td><p><strong>01 Apr 2016</strong></p></td>
-            <td class="text-center">
-              <i class="fa fa-check green"></i>
-              <!-- <p class="text-uppercase green">delivered</p> -->
-            </td>
-            <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
-          </tr>
-
-          <tr>
-            <td><strong><p>16 Mar 2016</strong></p></td>
-            <td class="text-center">
-              <i class="fa fa-check green"></i>
-              <!-- <p class="text-uppercase green">delivered</p> -->
-            </td>
-            <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
-          </tr>
-
-          <tr>
-            <td><p><strong>22 Feb 2016</strong></p></td>
-            <td class="text-center">
-              <i class="fa fa-check green"></i>
-              <!-- <p class="text-uppercase green">delivered</p> -->
-            </td>
-            <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
-          </tr>
-
-          <tr>
-            <td><strong><p>09 Dec 2015</strong></p></td>
-            <td class="text-center">
-              <i class="fa fa-close red"></i>
-              <!-- <p class="text-uppercase red"> not delivered </p> -->
-            </td>
-            <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
-          </tr>
-
-          <tr>
-            <td><p><strong>17 Nov 2015</strong></p></td>
-            <td class="text-center">
-              <i class="fa fa-check green"></i>
-              <!-- <p class="text-uppercase green">delivered</p> -->
-            </td>
-            <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
-          </tr>
-
-      </tbody>
-    </table>
-  </div>
-</div>
-
-<!-- Footer -->
-<div class="push"></div>
-<div class="footer">
-  <div class="col-xs-6 text-center">
-    <a role="button" href="preview list.html">
-      <h6 class="text-uppercase dark-grey">
-      <i class="fa fa-shopping-cart fa-border icon left"></i>cart
-      </h6>
-    </a>
-  </div>
-  <div class="col-xs-6 text-center">
-    <a role="button" href="all invoices.html">
-      <h6 class="text-uppercase dark-grey">
-      <i class="fa fa-file-o fa-border icon left"></i> invoices
-      </h6>
-    </a>
-  </div>
-  <!-- <div class="col-xs-4 text-center">
-    <h6 class="text-uppercase dark-grey"><i class="fa fa-search fa-border icon left"></i> search </h6>
-  </div> -->
-</div>
 
 
-
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/angular.js"></script>
-<script src="assets/js/ui-bootstrap-tpls-2.0.0.js"></script>
-<script src="assets/js/angular.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
-
 </html>
