--- a/app/views/mobile app stock requisition/invoice.html
+++ b/app/views/mobile app stock requisition/invoice.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- <header class="header"><img><span class="text-uppercase pull-right green"><i class="fa fa-check icon"></i><strong>online </strong></span></header>
-    <div class="container subHeader">
+    <div class="container subheader">
         <div class="row">
             <div class="col-xs-4">
                 <h4>Invoice </h4></div>
