--- a/app/views/mobile app stock requisition/preview list.html
+++ b/app/views/mobile app stock requisition/preview list.html
@@ -191,7 +191,7 @@
 
   <!-- Modal -->
     <div  id="myModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-sent">
 
         <!-- Modal content-->
         <div class="modal-content">
@@ -208,7 +208,7 @@
             <p class="text-center">You will receive an invoice for in-stock items in your registered email. </p>
           </div>
           <div class="modal-footer">
-            <a role="button" class="btn btn-white" href="home.html">OK</a>
+            <a role="button" class="btn btn-sent" href="requisition.html">OK</a>
             <!-- <button type="button" class="btn btn-white" data-dismiss="modal">OK</button> -->
           </div>
         </div>
