--- a/app/views/stock-count/stock-count-form.html
+++ b/app/views/stock-count/stock-count-form.html
@@ -62,7 +62,7 @@
     </div>
   </div>
 </div>
-<div class="panel panel-default" ng-class="getCategoryColor(((facilityProducts[productKey]).category).name)">
+<!-- <div class="panel panel-default" ng-class="getCategoryColor(((facilityProducts[productKey]).category).name)">
   <div class="panel-heading">
     <h1 class="panel-title">
       <div class="pull-left">
@@ -97,13 +97,13 @@
                   <div class="col-xs-12">
                     <div class="row">
 
-                      <!-- start form counter input -->
+                      //start form counter input
                       <div class="col-xs-12">
                         <div>
                           <eha-counter bind="countValue[productKey]"></eha-counter>
                           <div ng-show="productError" class="custom-error text-center">{{ productErrorMsg }}</div>
 
-                          <!-- conversion view starts here -->
+                          //conversion view starts here
                           <div class="no-bold text-center">
                             <h3>
                               <span ng-bind="countValue[productKey] * productProfileUom.presentation.value || 0"></span>
@@ -115,7 +115,7 @@
                         </div>
                       </div>
 
-                      <!-- this button is shown only in mobile mode -->
+                      //this button is shown only in mobile mode
                       <div class="col-xs-12">
                         <div class="btn-separator" ng-hide="step === maxStep">
                           <div class="btn-group btn-group-justified">
@@ -241,5 +241,133 @@
         </form>
       </div>
     </div>
+  </div>
+</div> -->
+
+<div class="container header">
+  <div class="row">
+  <div class="col-xs-8">
+    <h6 class="text-uppercase dark-grey">
+      <i class="fa fa-chevron-left icon"></i>home
+    </h6>
+  </div>
+
+  <div class="col-xs-4 text-right">
+    <h6 class="text-uppercase green"><i class="fa fa-check icon"></i><strong> online </strong></h6>
+  </div>
+</div>
+</div>
+
+<!--SubHeader-->
+<div class="container">
+  <div class="row">
+    <div class="col-xs-8">
+      <h5 class="">Stock Count</h5>
+      <!-- <p class = "dark-grey"> 28 May 2016 </p> -->
+    </div>
+    <div class="col-xs-4 text-right">
+      <h6 class="text-uppercase dark-grey"><i class="fa fa-question-circle icon"></i><strong>help </strong></h6>
+      <!-- <i class="fa fa-search dark-grey fa-border"></i> -->
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <h6 class="green">6/17 completed</h6>
+  <div class="progress">
+    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+      <span class="sr-only">36% Complete</span>
+    </div>
+  </div>
+</div>
+
+<!--Products-->
+<div class="container">
+<div class="table-responsive">
+  <table class="table">
+    <thead>
+      <tr class="dark-grey">
+        <th width="50%">STOCK ITEM </th>
+        <th width="30%">COUNT</th>
+        <th width="20%">UoM </th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr ng-repeat="product in products" class="category-row" onclick="input" data-toggle="modal" href="#myModal">
+        <td class="product-column"><p ng-bind="product.stockItem"></p></td>
+        <td class="product-column blue">
+          <p ng-bind="product.count" ng-show="hideInputBox(product)"></p>
+          <div class="input-group" ng-hide="hideInputBox(product)">
+            <input type="number" class="form-control" placeholder="" aria-describedby="basic-addon1">
+          </div>
+        </td>
+        <td class="product-column  blue"><p ng-bind="product.uom"></p></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+</div>
+
+<!--Send-->
+<div class="container text-center">
+  <button class="btn btn-blue">
+    SAVE STOCK COUNT
+  </button>
+</div>
+
+
+
+<!-- Modal -->
+<div  id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="push"></div>
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header text-right dark-grey">
+        <h5 type="button" data-dismiss="modal" aria-label="Close"><i class="fa fa-close icon" aria-hidden="true"></i>DONE</h5>
+      </div>
+
+      <div class="modal-body">
+        <h4 class="modal-title text-center">BCG 20</h4>
+        <div class="row product-detail">
+          <div class="col-xs-12">
+            <div class="input-group-product">
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default btn-number red qty-field"  data-type="minus" data-field="quant[2]">
+                <span class="fa fa-minus"></span>
+                </button>
+              </span>
+
+              <h4><input type="text" name="quant[2]" class="form-control input-number text-center qty-field" value="10 vials" min="0 unit" max="100 units"></h4>
+
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default btn-number green qty-field" data-type="plus" data-field="quant[2]">
+                <span class="fa fa-plus"></span>
+                </button>
+              </span>
+            </div>
+          </div>
+
+          <div class="col-xs-12 text-center stock-count-label-summary">
+            <h4 class="">100 vials</h4>
+            <h4>(2000 doses)</h4>
+          </div>
+
+          <div class="col-xs-6 text-center">
+            <a href="#" role="button" class="btn btn-blue qty-field"><i class="fa fa-arrow-left icon left"></i>Previous</a>
+          </div>
+          <div class="col-xs-6 text-center">
+            <a href="#" role="button" class="btn btn-blue qty-field">Next<i class="fa fa-arrow-right icon right"></i></a>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="modal-footer">
+        <a role="button" class="btn btn-white" href="home.html">OK</a>
+        <button type="button" class="btn btn-white" data-dismiss="modal">OK</button>
+      </div> -->
+    </div>
+
   </div>
 </div>
