--- a/app/views/mobile app stock requisition/onboarding-pharm-program.html
+++ b/app/views/mobile app stock requisition/onboarding-pharm-program.html
@@ -18,7 +18,7 @@
     <div class="header">
       <div class="row">
         <div class="col-xs-8">
-          <h5><a href="#" class="colorless"><i class="fa fa-suitcase icon"></i></a>RI</h5>
+          <h5><a href="#" class="colorless"><i class="fa fa-suitcase icon"></i></a>Pharmaceuticals</h5>
         </div>
 
         <div class="col-xs-4 text-right">
