--- a/app/views/mobile app stock requisition/requisition.html
+++ b/app/views/mobile app stock requisition/requisition.html
@@ -32,35 +32,29 @@
   <div class="container subheader">
     <div class="row">
       <div class="col-xs-8">
-        <h6><a role="button" href="new stock request II.html" class="btn btn-block request-new">
-          <i class="fa fa-plus icon"></i>Request New Stock
-        </a></h6>
+        <h6><em>To view invoices, click a previous requisition</em></h6>
       </div>
       <div class="col-xs-4 text-right">
         <h6 class="green"><i class="fa fa-check"></i><strong> ONLINE </strong></h6>
-        <!-- <h6 class="text-uppercase dark-grey text-right">
-          <i class="fa fa-question-circle icon"></i>
-          <strong>help </strong>
-        </h6> -->
       </div>
     </div>
   </div>
 
-
-  <!-- <div class="container">
-    <a role="button" href="new stock request II.html" class="btn request-new">
-      <i class="fa fa-plus icon"></i>Request New Stock
-    </a>
-  </div> -->
+  <div class="container">
+    <div class="row product-name">
+      <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        <h6><a role="button" href="new-stock-request-II.html" class="btn btn-block request-new">
+          <i class="fa fa-plus icon"></i>Request New Stock
+        </a></h6>
+      </div>
+    </div>
+  </div>
 
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-      <h4 class="orange">Previous Requisitions</h4>
+      <h5>Previous Requisitions</h5>
       </div>
-      <!-- <div class="col-xs-4 text-center">
-
-      </div> -->
     </div>
   </div>
 
@@ -69,8 +63,8 @@
       <table class="table">
         <thead>
         <tr>
-          <th class="">DATE</th>
-          <th class="text-center">DELIVERED? </th>
+          <th><h5>DATE</h5></th>
+          <th class="text-center"><h5>DELIVERED? </h5></th>
           <th> </th>
         </tr>
         </thead>
@@ -79,7 +73,6 @@
             <td><p><strong>28 May 2016</strong></p></td>
             <td class="text-center">
               <i class="fa fa-close red"></i>
-              <!-- <p class="text-uppercase red">not delivered</p> -->
             </td>
             <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
           </tr>
@@ -88,7 +81,6 @@
             <td><p><strong>01 Apr 2016</strong></p></td>
             <td class="text-center">
               <i class="fa fa-check green"></i>
-              <!-- <p class="text-uppercase green">delivered</p> -->
             </td>
             <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
           </tr>
@@ -97,7 +89,6 @@
             <td><strong><p>16 Mar 2016</strong></p></td>
             <td class="text-center">
               <i class="fa fa-check green"></i>
-              <!-- <p class="text-uppercase green">delivered</p> -->
             </td>
             <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
           </tr>
@@ -106,7 +97,6 @@
             <td><p><strong>22 Feb 2016</strong></p></td>
             <td class="text-center">
               <i class="fa fa-check green"></i>
-              <!-- <p class="text-uppercase green">delivered</p> -->
             </td>
             <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
           </tr>
@@ -115,7 +105,6 @@
             <td><strong><p>09 Dec 2015</strong></p></td>
             <td class="text-center">
               <i class="fa fa-close red"></i>
-              <!-- <p class="text-uppercase red"> not delivered </p> -->
             </td>
             <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
           </tr>
@@ -124,7 +113,6 @@
             <td><p><strong>17 Nov 2015</strong></p></td>
             <td class="text-center">
               <i class="fa fa-check green"></i>
-              <!-- <p class="text-uppercase green">delivered</p> -->
             </td>
             <td class="text-right"><p><i class="fa fa-chevron-right icon light-grey"></i></p></td>
           </tr>
