--- a/app/views/mobile app stock requisition/home.html
+++ b/app/views/mobile app stock requisition/home.html
@@ -16,7 +16,7 @@
 <body class="">
   <div class="">
     <!--Header-->
-      <div class="container header">
+      <div class="header">
         <div class="container">
           <div class="row">
             <div class="col-xs-6">
@@ -51,7 +51,7 @@
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/stock.png"> -->
-                <i class="fa fa-list"></i>
+                <i class="fa fa-list fa-2x"></i>
               </div>
               <div class="col-xs-8 white-column">
                 <h5>Stock Count</h5>
@@ -68,7 +68,7 @@
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/bell.png"> -->
-                <i class="fa fa-bell"></i>
+                <i class="fa fa-bell fa-2x"></i>
               </div>
               <div class="col-xs-8 white-column">
                 <h5>Stock Out Alert</h5>
@@ -85,7 +85,7 @@
             <div class="row">
               <div class="col-xs-2 text-center orange-column">
                 <!-- <img src="assets/img/business.png"> -->
-                <i class="fa fa-shopping-cart"></i>
+                <i class="fa fa-shopping-cart fa-2x"></i>
               </div>
               <div class="col-xs-8 white-column">
                 <h5>Stock Requisition</h5>
@@ -98,11 +98,11 @@
         </div>
 
         <div class="list">
-          <a href="#" class="colorless">
+          <a href="waste-count.html" class="colorless">
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/trash-1.png"> -->
-                <i class="fa fa-trash"></i>
+                <i class="fa fa-trash fa-2x"></i>
               </div>
               <div class="col-xs-8 white-column">
                 <h5>Waste Count</h5>
@@ -119,7 +119,7 @@
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/business-1.png"> -->
-                <i class="fa fa-arrow-down"></i>
+                <i class="fa fa-arrow-down fa-2x"></i>
               </div>
               <div class="col-xs-8 white-column">
                 <h5>Incoming Delivery</h5>
@@ -136,7 +136,7 @@
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/business-2.png"> -->
-                <i class="fa fa-arrow-up"></i>
+                <i class="fa fa-arrow-up fa-2x"></i>
               </div>
               <div class="col-xs-8 white-column">
                 <h5>Outgoing Delivery</h5>
@@ -153,7 +153,7 @@
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/business-2.png"> -->
-                <i class="fa fa-gear"></i>
+                <i class="fa fa-gear fa-2x"></i>
               </div>
               <div class="col-xs-8 white-column">
                 <h5>Settings</h5>
@@ -170,7 +170,7 @@
             <div class="row">
               <div class="col-xs-2 orange-column text-center">
                 <!-- <img src="assets/img/business-2.png"> -->
-                <i class="fa fa-info-circle"></i>
+                <i class="fa fa-info-circle fa-2x"></i>
               </div>
               <div class="col-xs-8 white-column">
                 <h5>Help</h5>
