--- a/app/views/mobile app stock requisition/new-stock-request-II.html
+++ b/app/views/mobile app stock requisition/new-stock-request-II.html
@@ -14,55 +14,51 @@
 
 <body ng-controller="HomeController">
 
-<!--Header-->
-  <div class="container header">
-    <div class="col-xs-6">
-      <h6 class="text-uppercase dark-grey"><i class="fa fa-chevron-left icon"></i>home</h6>
-    </div>
+  <!--Header-->
+    <div class="header">
+      <div class="row">
+        <div class="col-xs-8">
+          <h5><a href="requisition.html" class="colorless"><i class="fa fa-chevron-left icon"></i></a>New Stock Request</h5>
+        </div>
 
-    <div class="col-xs-6 text-right">
-      <h6 class="text-uppercase green"><i class="fa fa-check icon"></i><strong> online </strong></h6>
-    </div>
-  </div>
-
-  <!--SubHeader-->
-    <div class="container">
-      <div class="col-xs-8">
-        <h5 class="">New Stock Request</h5>
-        <!-- <p class = "dark-grey"> 28 May 2016 </p> -->
-      </div>
-      <div class="col-xs-4 text-right">
-        <h6 class="text-uppercase dark-grey"><i class="fa fa-question-circle icon"></i><strong>help </strong></h6>
-        <!-- <i class="fa fa-search dark-grey fa-border"></i> -->
-      </div>
-    </div>
-
-  <!-- Search -->
-  <!-- <div class="container">
-    <div class="col-xs-12">
-    <div class="search-bar text-center">
-      <em><input type="text" name="search bar" placeholder="Type to search" autocomplete="on" class="text-center">
-      <i class="fa fa-search icon dark-grey"></i></em>
-    </div>
-    </div>
-  </div> -->
-
-  <div class="container">
-	<!-- <div class="row"> -->
-    <div class="col-xs-12">
-      <div id="imaginary_container">
-        <div class="input-group item-search">
-          <input type="text" class="form-control"  placeholder="Search for a product" >
-          <span class="input-group-addon">
-            <button type="submit">
-              <span class="fa fa-search"></span>
-            </button>
-          </span>
+        <div class="col-xs-4 text-right">
+          <h6 class=""><i class="fa fa-question-circle icon"></i><strong>HELP </strong></h6>
         </div>
       </div>
     </div>
-	<!-- </div> -->
-</div>
+
+    <!--SubHeader-->
+    <div class="container subheader">
+      <div class="row">
+        <div class="col-xs-8">
+          <h6>SHOPPING CART (4)</h6>
+        </div>
+        <div class="col-xs-4 text-right green">
+          <h6><i class="fa fa-check"></i><strong> ONLINE </strong></h6>
+          <!-- <i class="fa fa-search dark-grey fa-border"></i> -->
+        </div>
+      </div>
+    </div>
+
+
+  <div class="container">
+    <div class="product-name">
+      <div class="row">
+        <div class="col-xs-12">
+          <div id="imaginary_container">
+            <div class="input-group item-search">
+              <input type="text" class="form-control"  placeholder="Search for a product" >
+              <span class="input-group-addon">
+                <button type="submit">
+                  <span class="fa fa-search"></span>
+                </button>
+              </span>
+            </div>
+          </div>
+        </div>
+  	 </div>
+    </div>
+  </div>
 
 <!--Category list-->
   <div class="container">
@@ -141,7 +137,7 @@
   </div>
 
   <!-- Footer -->
-  <div class="push"></div>
+  <!-- <div class="push"></div>
   <div class="footer">
     <div class="col-xs-6 text-center">
       <a role="button" href="preview list.html">
@@ -157,10 +153,7 @@
         </h6>
       </a>
     </div>
-    <!-- <div class="col-xs-4 text-center">
-      <h6 class="text-uppercase dark-grey"><i class="fa fa-search fa-border icon left"></i> search </h6>
-    </div> -->
-  </div>
+  </div> -->
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
