--- a/app/views/mobile app stock requisition/onboarding-stock-detail.html
+++ b/app/views/mobile app stock requisition/onboarding-stock-detail.html
@@ -18,11 +18,11 @@
     <div class="header">
       <div class="row">
         <div class="col-xs-8">
-          <h5><a href="#" class="colorless"><i class="fa fa-suitcase icon"></i></a>RI</h5>
+          <h6><a href="onboarding-ri-program.html" class="colorless"><i class="fa fa-chevron-left icon"></i></a>RI Stock Count Activity</h6>
         </div>
 
         <div class="col-xs-4 text-right">
-          <h6><i class="fa fa-question-circle icon left"></i><strong> HELP </strong></h6>
+          <h6><i class="fa fa-question-circle icon"></i><strong> HELP </strong></h6>
         </div>
       </div>
     </div>
@@ -30,7 +30,7 @@
     <div class="container subheader">
       <div class="row">
         <div class="col-xs-8">
-          <h6>Reminders and stock list</h6>
+          <h6>Select stock count interval and reminder</h6>
         </div>
         <div class="col-xs-4 text-right">
           <h6 class="green"><i class="fa fa-check"></i><strong> ONLINE </strong></h6>
@@ -38,23 +38,14 @@
       </div>
     </div>
 
-    <!-- <div class="container">
-      <a href="onboarding-stock-activity.html" class="colorless"><div class="product-name">
-        <h5>Stock Count Activity</h5>
-      </div></a>
-      <a href="onboarding-stock-list.html" class="colorless"><div class="product-name">
-        <h5>Stock List</h5>
-      </div></a>
-    </div> -->
-
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default panel-config">
         <div class="panel-heading" role="tab" id="headingOne">
-          <p class="panel-title">
+          <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
               Stock Count Activity
             </a>
-          </p>
+          </h4>
         </div>
         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
           <div class="panel-body">
@@ -80,16 +71,52 @@
                 </div>
               </div>
             </div>
+
+            <!-- Footer -->
+            <div class="push"></div>
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-6">
+                  <button type="button" class="btn btn-default btn-block btn-cancel"><a class="colorless" href="onboarding.html#programs">CANCEL</a></button>
+                </div>
+                <div class="col-xs-6">
+                  <button type="button" class="btn btn-default btn-block btn-save"><a class="colorless" role="button" data-toggle="modal" data-target="#myModal">SAVE</a></button>
+                </div>
+              </div>
+            </div>
+            <div class="push"></div>
+
+            <!-- Modal -->
+              <div  id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                  <!-- Modal content-->
+                  <div class="modal-content modal-saved">
+
+                    <div class="modal-body">
+                      <div class="push"></div>
+                      <div class="text-center">
+                        <i class="fa fa-check-circle fa-2x"></i>
+                      </div>
+                      <h4 class="text-center"> Stock Activity Saved! </h4>
+                    </div>
+                    <div class="modal-footer">
+                      <a role="button" class="btn btn-block btn-saved" data-dismiss="modal"><h5>OK</h5></a>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
           </div>
         </div>
       </div>
       <div class="panel panel-default panel-config">
         <div class="panel-heading" role="tab" id="headingTwo">
-          <p class="panel-title">
+          <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
               Stock List
             </a>
-          </p>
+          </h4>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
           <div class="panel-body">
@@ -128,22 +155,46 @@
                 <div class="input-group"><h6><input type="checkbox" aria-label="...">  P151</h6></div>
               </div>
             </div>
+
+            <!-- Footer -->
+            <div class="push"></div>
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-6">
+                  <button type="button" class="btn btn-default btn-block btn-cancel">CANCEL</button>
+                </div>
+                <div class="col-xs-6">
+                  <button type="button" class="btn btn-default btn-block btn-save"><a class="colorless" role="button" data-toggle="modal" data-target="#myModal">SAVE</a></button>
+                </div>
+              </div>
+            </div>
+            <div class="push"></div>
+
+            <!-- Modal -->
+              <div  id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                  <!-- Modal content-->
+                  <div class="modal-content modal-saved">
+
+                    <div class="modal-body">
+                      <div class="push"></div>
+                      <div class="text-center">
+                        <i class="fa fa-check-circle fa-2x"></i>
+                      </div>
+                      <h4 class="text-center"> Stock List Saved! </h4>
+                    </div>
+                    <div class="modal-footer">
+                      <a role="button" class="btn btn-block btn-saved" href="onboarding-ri-program.html"><h5>OK</h5></a>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
           </div>
         </div>
       </div>
     </div>
-  <!-- Footer -->
-  <div class="home-heading spacer"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-6">
-        <button type="button" class="btn btn-default btn-block btn-cancel"><a href="onboarding.html" class="colorless" role="button">BACK</a></button>
-      </div>
-      <div class="col-xs-6">
-        <button type="button" class="btn btn-default btn-block btn-inactive"><a class="colorless" role="button" data-toggle="modal" data-target="#myModal">CONTINUE</a></button>
-      </div>
-    </div>
-  </div>
 
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
